# diffusion

./: .gitignore  LICENSE  README.md  example_usage.py  hydra_sampling_example.py  pyproject.toml  sonar-project.properties
.github/workflows/: build.yaml
configs/: .gitignore  sample.yaml  train.yaml  train_run.yaml
configs/callbacks/: default.yaml  image_generation.yaml  learning_rate_monitor.yaml  model_checkpoint.yaml  rich_progress_bar.yaml  sample.yaml
configs/data/: cifar10.yaml  mnist.yaml  simple_mnist.yaml
configs/diffusion/: default.yaml  gaussian_diffusion.yaml
configs/diffusion/image_sampler/: ddim.yaml  ddpm.yaml
configs/diffusion/loss/: hybrid.yaml  (+6 more)
configs/experiment/: quick_cifar.yaml  quick_mnist.yaml  quick_start.yaml
configs/extras/: default.yaml
configs/hydra/: default.yaml
configs/logger/: csv.yaml  many_loggers.yaml  tensorboard.yaml  wandb.yaml
configs/loss/: mean_mse.yaml  mean_simple_mse.yaml  mse.yaml  mse_mean_epsilon.yaml  noise_mse.yaml  noise_simple_mse.yaml  simple_mse.yaml  variational_bound.yaml
configs/mean/: xstart.yaml
configs/model/: ddm.yaml  little.yaml  small_unet.yaml  unet_cifar.yaml
configs/optimizer/: adam.yaml  adamw.yaml
configs/paths/: default.yaml
configs/scheduler/: linear.yaml
configs/trainer/: default.yaml
configs/variance/: fixed_large.yaml  fixed_small.yaml
docs/: diffusion.drawio
scripts/: mnist-epsilon-fixed_small-mse_simple.sh  mnist_basic.sh
src/diffusion/: __init__.py  attention.py  diffusion_factors.py  diffusion_terms.py  difo.py  gaussian_diffusion.py  gaussian_utils.py  image_samplers.py  losses.py  main.py  means.py  metrics.py  sample.py  sampler.py  samplers.py  schedulers.py  timestep_samplers.py  train.py  unet.py  variances.py  variances2.py
src/school/: diffusion.py  diffusion_template.py  factors.py  factors_template.py  schedulers.py  schedulers_template.py
tests/: conftest.py  test_end_to_end.py  test_factors.py  test_gaussian_diffusion.py  test_gaussian_diffusion_hydra.py  test_hybrid_gradient_isolation.py  test_losses.py  test_losses_hydra.py  test_means.py  test_means_hydra.py  test_samplers_hydra.py  test_schedulers.py  test_schedulers_hydra.py  test_train.py  test_variances.py  test_variances_hydra.py
tests/callbacks/: test_image_generation.py
tests/data/: test_cifar10.py  test_filtered_mnist.py  test_mnist.py  test_mnist_datamodule.py  test_mnist_hydra.py  test_simple_mnist_datamodule.py
tests/legacy/: conftest.py  test_configs.py  test_train.py
tests/runners/: test_train.py  test_train_integration.py  test_train_smoke.py
tests/utils/: test_naming.py
(+62 files in other folders)
