[project]
name = "diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.3.1",
    "torchvision>=0.18.1",
    "numpy>=2.1.0",
    "opencv-python>=4.10.0.84",
    "plotly>=5.23.0",
    "streamlit>=1.37.1",
    "ipython>=8.26.0",
    "lightning>=2.4.0",
    "rootutils>=1.0.7",
    "rich>=13.7.1",
    "hydra-core>=1.3.2",
    "hydra-colorlog>=1.2.0",
    "einops>=0.8.0",
    "accelerate>=0.31.0",
    "ema-pytorch>=0.6.2",
    "scipy>=1.14.1",
    "aim>=3.24.0",
    "matplotlib>=3.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "pytest>=8.3.2",
    "ipython>=8.26.0",
]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
# ignore = ["C901", "E501", "E741", "F402", "F823" ]
select = ["C", "E", "F", "I", "N"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
